# caffe-cpp-examples

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  get-caffe.sh  travis-install-caffe.sh
src/shape/: CMakeLists.txt  README.md  classify-shape.cpp  classify.sh  deploy.prototxt  generate-random-shape-training-data.cpp  generate.sh  solver.prototxt  train-test.prototxt  train.sh
src/xor/: CMakeLists.txt  README.md  classify-xor.cpp  classify.sh  deploy.prototxt  generate-random-training-data.cpp  generate-random-xor-training-data.cpp  generate.sh  solver.prototxt  train-test.prototxt
